--- a/Dendritic_main.ipynb
+++ b/Dendritic_main.ipynb
@@ -68,7 +68,7 @@
         "#!pip install -r requirements.txt\n",
         "!pip install randaugment\n",
         "!pip install timm\n",
-        "!pip install inplace_abn\n",
+        "#!pip install inplace_abn\n",
         "!pip install split-folders\n",
         "!pip install gdown"
       ],
