--- a/Dendritic_main.ipynb
+++ b/Dendritic_main.ipynb
@@ -65,12 +65,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#!pip install -r requirements.txt\n",
-        "!pip install randaugment\n",
-        "!pip install timm\n",
-        "#!pip install inplace_abn\n",
-        "!pip install split-folders\n",
-        "!pip install gdown"
+        "!pip install -r requirements.txt"
       ],
       "metadata": {
         "colab": {
